2004-03-03  Yusei Tahara  <tahara@timedia.co.jp>

	* test/developer.scm, test/plugin.scm, test/sandbox.scm:
	added japanese comment and test-module check.
	* test/config.scm: added japanese comment.
	* src/kahua/pdf/main.scm, src/kahua/pdf/state.scm, src/kahua/typeset.scm:
	remove non-defined symbols from export list.
	(with-document, with-document-to-port, with-document-to-file,
	 with-page, with-docdata-to-file, with-docdata-to-port):
	in gauche, with-* get thunk instead of body. now these are procedures,
	not macros.
	(with-output-to-string): removed.
	* test/pdf.scm: added test-module check and change with-* argument.

2004-03-03  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua-spvr.in: added more log output.

2004-03-02  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/elem.scm: added pdf: and pdf/ for publishing pdf document.
	* src/kahua/sandbox.scm (make-sandbox-module):
	fixed a module dependency. now use kahua.plugin.
	disabled exit, sys-exit, sys-abort bindings in sandbox module.
	renamed wrong name export-module-except to enable-module-except.

2004-03-01  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/pdf/interp.scm (html-environment): added kahua specific
	tags, form/cont, a/cont and so on.
	* src/kahua/pdf.scm, src/kahua/pdf/*: added pdf library.
	* src/kahua/server.scm:
	(add-interp!, get-interp, kahua-render-proc): separete interp-html-rec.
	(interp-pdf): added. it generates PDF.
	* src/kahua.scm: added kahua.pdf.
	* src/Makefile.in (INSTALL_DIRS, SCMFILES): install kahua/pdf/*.scm.

2004-03-01  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua-spvr.in : fixed to stop restarting worker which doesn't
	run over 60 sec.

2004-03-01  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* examples/foldlist/foldlist.kahua : added foldlist sample program.
	* examples/Makefile : added foldlist.kahua entry
	* test/Makefile, test/foldlist.scm : added test for foldlist.kahua
	
2004-03-01  Koichi Sasada <sasada@namikilab.tuat.ac.jp>
